# Oakdevtech_CircuitPython_IcePython

./: LICENSE  README.rst  README.rst.license  oakdevtech_icepython.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
examples/: icepython_simpletest.py
