# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Seth Kerr for Oak Development Technologies
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "oakdevtech-circuitpython-icepython"
description = "A library for programming iCE40 FPGA from Lattice Semi"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Oak Development Technologies", email = "hello@oakdev.tech"}
]
urls = {Homepage = "https://github.com/skerr92/Oakdevtech_CircuitPython_IcePython"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "icepython",
    "fpga,",
    "spi,",
    "spi_device",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["oakdevtech_icepython"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
